# lynton

./: .ccls  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build  check  cmake_install.cmake  premake5.lua
.github/workflows/: build_linux.yml  build_macos.yml  build_wasm.yml  build_windows.yml
cmake/: FindSDL2.cmake
debug/: CMakeCache.txt
debug/sandbox/: Makefile  sandbox.js
lynton/: CMakeLists.txt  Makefile  cmake_install.cmake  premake5.lua
lynton/include/: lynton.h
lynton/src/: main.cpp  pch.h  sdl_test.cpp  sdl_test.cpp_
lynton/src/core/: application.cpp  application.h  entry_point.cpp  layer.cpp  layer.h  log.cpp  log.h  random.h
lynton/src/math/: defs.h  matrices.h
lynton/src/renderer/: renderable.h  renderer.cpp  renderer.h
lynton/src/renderer/camera/: camera.cpp  camera.h
lynton/src/renderer/renderable/: renderable.cpp  renderable.h  texquad.cpp  texquad.h
lynton/src/renderer/texture/: font.h  texture.cpp  texture.h  texture_library.cpp  texture_library.h
lynton/src/time/: timer.cpp  timer.h
physics_words/: CMakeLists.txt  Makefile  cmake_install.cmake  physics_words.html  physics_words.js  physics_words.wasm
physics_words/src/: debug_layer.cpp  debug_layer.h  font.cpp  font.h  game_layer.cpp  game_layer.h  main.cpp  quad.cpp  quad.h
public/: index_debug.html
release/: CMakeCache.txt  cmake_install.cmake
release/lynton/: Makefile  cmake_install.cmake
release/sandbox/: sandbox.data  sandbox.html  sandbox.js  sandbox.wasm
sandbox/: CMakeLists.txt  Makefile  cmake_install.cmake  sandbox.html  sandbox.js  sandbox.wasm
sandbox/src/: debug_layer.cpp  debug_layer.h  main.cpp  sandbox_layer.cpp  sandbox_layer.h  test.cpp
